jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: plex
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: docker.io/jellyfin/jellyfin:10.5.4
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8096
        livenessProbe:
          initialDelaySeconds: 30
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        volumeMounts:
        - mountPath: /tmp
          name: cache
        - mountPath: /config
          name: config
        - mountPath: /media
          name: data
      volumes:
      - name: cache
        emptyDir: {}
      - name: data
        persistentVolumeClaim:
          claimName: plex-data
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
